--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,13 @@ stages:
         npm install
         npm run build
       displayName: 'npm install and build'
+
+    - task: CopyFiles@2
+      inputs:
+        SourceFolder: '$(Build.SourcesDirectory)'
+        Contents: '**'
+        TargetFolder: '$(Build.ArtifactStagingDirectory)'
+      
     - task: PublishBuildArtifacts@1
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
