--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,14 @@ stages:
       vmImage: ubuntu-latest
 
     steps:
+
+    - task: DownloadBuildArtifacts@1
+      inputs:
+        buildType: 'current'
+        downloadType: 'single'
+        artifactName: 'drop'
+        downloadPath: '$(System.ArtifactsDirectory)'
+
     - task: AzureRmWebAppDeployment@4
       inputs:
         ConnectionType: 'AzureRM'
