Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,5 +62,5 @@ stages:
         deployToSlotOrASE: true
         ResourceGroupName: 'inlinemarket-exercise'
         SlotName: 'staging'
-        packageForLinux: '$(System.ArtifactsDirectory)/**/dist/*.js'
+        packageForLinux: '$(System.ArtifactsDirectory)/**/dist/bundle.js'
     
