--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,13 +30,12 @@ stages:
         SourceFolder: '$(Build.SourcesDirectory)'
         Contents: '**'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
-      
-    - task: PublishBuildArtifacts@1
+
+    - task: PublishPipelineArtifact@1
       inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-        ArtifactName: 'drop'
-        publishLocation: 'Container'
-        
+        targetPath: '$(Pipeline.Workspace)'
+        artifact: 'drop'
+        publishLocation: 'pipeline'
 
 - stage: DeploytoStaging
   jobs:
@@ -46,12 +45,14 @@ stages:
 
     steps:
 
-    - task: DownloadBuildArtifacts@1
+    - task: DownloadPipelineArtifact@2
       inputs:
-        buildType: 'current'
-        downloadType: 'single'
+        buildType: 'specific'
+        project: '73714e5f-13bc-4fcb-923c-f968cfe12847'
+        definition: '26'
+        buildVersionToDownload: 'latest'
         artifactName: 'drop'
-        downloadPath: '$(System.ArtifactsDirectory)'
+        targetPath: '$(Pipeline.Workspace)'
 
     - task: AzureRmWebAppDeployment@4
       inputs:
