--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@azure/storage-blob": "^12.7.0",
     "http": "0.0.1-security",
+    "papaparse": "^5.3.1",
     "url": "^0.11.0",
     "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2"
