Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,3 +77,4 @@ stages:
         Action: 'Swap Slots'
         WebAppName: 'dataui'
         ResourceGroupName: 'inlinemarket-exercise'
+        SourceSlot: 'staging'
