--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,43 +38,56 @@ stages:
         artifact: 'drop'
         publishLocation: 'pipeline'
 
-- stage: DeploytoStaging
+- stage: DeployStaging
+  displayName: Deploystaging
+  dependsOn: Build
+  condition: succeeded()
   jobs:
-  - job: DeploytoStaging
-    pool:
+  - deployment: Deploy
+    displayName: Deploy
+    environment: staging
+    pool: 
       vmImage: ubuntu-latest
-
-    steps:
-    - task: DownloadPipelineArtifact@2
-      inputs:
-        buildType: 'current'
-        artifactName: 'drop'
-        targetPath: '$(Pipeline.Workspace)'
-
-    - task: AzureRmWebAppDeployment@4
-      inputs:
-        ConnectionType: 'AzureRM'
-        azureSubscription: 'azconnection'
-        appType: 'webAppLinux'
-        WebAppName: 'dataui'
-        deployToSlotOrASE: true
-        ResourceGroupName: 'inlinemarket-exercise'
-        SlotName: 'staging'
-        packageForLinux: '$(Pipeline.Workspace)/$(Build.BuildId).zip'
-        RuntimeStack: 'NODE|12.9'
+    strategy:
+      runOnce:
+        deploy:
+          steps:            
+          - task: AzureWebApp@1
+            displayName: 'Azure Web App Deploy: dataui'
+            inputs:
+              azureSubscription: 'azconnection'
+              appType: 'webAppLinux'
+              appName: 'dataui'
+              deployToSlotOrASE: true
+              resourceGroupName: 'inlinemarket-exercise'
+              slotName: 'staging'
+              package: '$(Pipeline.Workspace)/$(Build.BuildId).zip'
+              runtimeStack: 'NODE|10.10'
+              startUpCommand: 'npm run start'
 
 
-- stage: DeploytoProd
+- stage: DeployProd
+  displayName: DeployProd
+  dependsOn: DeployStaging
+  condition: succeeded()
   jobs:
-  - job: DeploytoProd
-    pool:
+  - deployment: Deploy
+    displayName: Deploy
+    environment: prod
+    pool: 
       vmImage: ubuntu-latest
+    strategy:
+      runOnce:
+        deploy:
+          steps:            
+          - task: AzureWebApp@1
+            displayName: 'Azure Web App Deploy: dataui'
+            inputs:
+              azureSubscription: 'azconnection'
+              appType: 'webAppLinux'
+              appName: 'dataui'
+              package: '$(Pipeline.Workspace)/$(Build.BuildId).zip'
+              runtimeStack: 'NODE|10.10'
+              startUpCommand: 'npm run start'    
 
-    steps:
-    - task: AzureAppServiceManage@0
-      inputs:
-        azureSubscription: 'azconnection'
-        Action: 'Swap Slots'
-        WebAppName: 'dataui'
-        ResourceGroupName: 'inlinemarket-exercise'
-        SourceSlot: 'staging'
+    
