--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ stages:
     steps:
     - task: NodeTool@0
       inputs:
-        versionSpec: '14.x'
+        versionSpec: '10.x'
       displayName: 'Install Node.js'
 
     - script: |
@@ -61,7 +61,7 @@ stages:
               deployToSlotOrASE: true
               resourceGroupName: 'inlinemarket-exercise'
               slotName: 'staging'
-              package: '$(Pipeline.Workspace)/$(Build.BuildId).zip'
+              package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
               runtimeStack: 'NODE|10.10'
               startUpCommand: 'npm run start'
 
@@ -86,7 +86,7 @@ stages:
               azureSubscription: 'azconnection'
               appType: 'webAppLinux'
               appName: 'dataui'
-              package: '$(Pipeline.Workspace)/$(Build.BuildId).zip'
+              package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
               runtimeStack: 'NODE|10.10'
               startUpCommand: 'npm run start'    
 
