--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,90 @@ stages:
       vmImage: ubuntu-latest
 
     steps:
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '10.x'
+      displayName: 'Install Node.js'
+
+    - script: |
+        npm install
+        npm run build
+      displayName: 'npm install and build'
+
+    - task: ArchiveFiles@2
+      inputs:
+        rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+        includeRootFolder: false
+        archiveType: 'zip'
+        archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+        replaceExistingArchive: true
+
+    - task: PublishPipelineArtifact@1
+      inputs:
+        targetPath: '$(Build.ArtifactStagingDirectory)'
+        artifact: 'drop'
+        publishLocation: 'pipeline'
+
+- stage: DeployStaging
+  displayName: Deploystaging
+  dependsOn: Build
+  condition: succeeded()
+  jobs:
+  - deployment: Deploy
+    displayName: Deploy
+    environment: staging
+    pool: 
+      vmImage: ubuntu-latest
+    strategy:
+      runOnce:
+        deploy:
+          steps:            
+          - task: AzureWebApp@1
+            displayName: 'Azure Web App Deploy: dataui'
+            inputs:
+              azureSubscription: 'azconnection'
+              appType: 'webAppLinux'
+              appName: 'dataui'
+              deployToSlotOrASE: true
+              resourceGroupName: 'inlinemarket-exercise'
+              slotName: 'staging'
+              package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
+              runtimeStack: 'NODE|10.10'
+              startUpCommand: 'npm run start'
+
+          - task: AzurePowerShell@5
+            inputs:
+              azureSubscription: 'azconnection'
+              ScriptType: 'FilePath'
+              ScriptPath: '$(System.DefaultWorkingDirectory)/Notifications.ps1'
+              ScriptArguments: '-envName $(Release.EnvironmentName) -status $(Release.Environments.{stage name}.Status)'
+              azurePowerShellVersion: 'LatestVersion'
+
+- stage: DeployProd
+  displayName: DeployProd
+  dependsOn: DeployStaging
+  condition: succeeded()
+
+  jobs:
+  - deployment: Deploy
+    displayName: Deploy
+    environment: prod
+    pool: 
+      vmImage: ubuntu-latest
+    strategy:
+      runOnce:
+        deploy:
+        
+          steps:            
+          - task: AzureAppServiceManage@0
+            inputs:
+              azureSubscription: 'azconnection'
+              Action: 'Swap Slots'
+              WebAppName: 'dataui'
+              ResourceGroupName: 'inlinemarket-exercise'
+              SourceSlot: 'staging'
+
+    
 
     - task: AzurePowerShell@5
       inputs:
