--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,24 +73,11 @@ stages:
 
     steps:
 
-      - task: DownloadPipelineArtifact@2
-        inputs:
-          buildType: 'current'
-          artifactName: 'drop'
-          targetPath: '$(Pipeline.Workspace)'
-
-      - task: ExtractFiles@1
-        inputs:
-          archiveFilePatterns: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
-          destinationFolder: '$(Pipeline.Workspace)'
-          cleanDestinationFolder: true
-          overwriteExistingFiles: true
-
       - task: AzurePowerShell@5
         inputs:
           azureSubscription: 'azconnection'
           ScriptType: 'FilePath'
-          ScriptPath: '$(Pipeline.Workspace)/Notifications.ps1'
+          ScriptPath: '$(System.DefaultWorkingDirectory)/Notifications.ps1'
           ScriptArguments: '-envName $(Environment.Name) -status $(Environment.Name)'
           azurePowerShellVersion: 'LatestVersion'
 
