--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ stages:
         rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
         includeRootFolder: false
         archiveType: 'zip'
-        archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zap'
+        archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
         replaceExistingArchive: true
 
     - task: PublishPipelineArtifact@1
@@ -160,4 +160,69 @@ stages:
               ResourceGroupName: 'inlinemarket-exercise'
               SourceSlot: 'staging'
 
+          - powershell: |
+                $envName="$(Environment.Name)"
+                $pipeName="$(Build.DefinitionName)"
+                $buildreason="$(Build.Reason)"
+                echo $envName
+                echo $resName
+
+
+                $JSONBody = [PSCustomObject][Ordered]@{
+                "@type" = "MessageCard"
+                "@context" = "<http://schema.org/extensions>"
+                "summary" = "Slot Swap to Prod Success"
+                "themeColor" = '0078D7'
+                "title" = "Slot Swap to Prod Success"
+                "text" = "`n 
+                EnvName: $($envName)`n
+                Pipeline: $($pipeName)`n
+                Reason: $($buildreason)
+                "
+                }
+
+                $TeamMessageBody = ConvertTo-Json $JSONBody
+
+                $parameters = @{
+                "URI" = "https://inlinemarketevolutionoy.webhook.office.com/webhookb2/0da9231a-2d3c-4f8e-bda1-767017fbee8b@1e3ee4c0-94a9-45a4-9151-07e1858e6372/IncomingWebhook/471e30b85bff43fb97d37a5235b38799/4b3fb30e-1e8c-4832-be5d-df3bcd5271bc"
+                "Method" = 'POST'
+                "Body" = $TeamMessageBody
+                "ContentType" = 'application/json'
+                }
+
+                Invoke-RestMethod @parameters
+            condition: succeeded()
+
+          - powershell: |
+                $envName="$(Environment.Name)"
+                $pipeName="$(Build.DefinitionName)"
+                $buildreason="$(Build.Reason)"
+                echo $envName
+                echo $resName
+
+
+                $JSONBody = [PSCustomObject][Ordered]@{
+                "@type" = "MessageCard"
+                "@context" = "<http://schema.org/extensions>"
+                "summary" = "Slot Swap to Prod Failed"
+                "themeColor" = '0078D7'
+                "title" = "Slot Swap to Prod Failed"
+                "text" = "`n 
+                EnvName: $($envName)`n
+                Pipeline: $($pipeName)`n
+                Reason: $($buildreason)
+                "
+                }
+
+                $TeamMessageBody = ConvertTo-Json $JSONBody
+
+                $parameters = @{
+                "URI" = "https://inlinemarketevolutionoy.webhook.office.com/webhookb2/0da9231a-2d3c-4f8e-bda1-767017fbee8b@1e3ee4c0-94a9-45a4-9151-07e1858e6372/IncomingWebhook/471e30b85bff43fb97d37a5235b38799/4b3fb30e-1e8c-4832-be5d-df3bcd5271bc"
+                "Method" = 'POST'
+                "Body" = $TeamMessageBody
+                "ContentType" = 'application/json'
+                }
+
+                Invoke-RestMethod @parameters
+            condition: failed()
      
